--- a/10-Programming-Cues-and-Scenes.Rmd
+++ b/10-Programming-Cues-and-Scenes.Rmd
@@ -477,7 +477,7 @@ Cue Settings pop-up
 -   Wait Time
     
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FIixTv98KdARFznVJRhSs%2Fimage.png?alt=media&token=7988483e-a9d5-4ed6-a020-867a05cfa43d)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fqk1bKQWhDqyhg1qAysYP%2F10.11.1.webp?alt=media&token=7ef7e27d-8ad5-4efe-ae36-6e6966a8045a)
 
 **Time Pop-up**
 
@@ -558,9 +558,36 @@ Cues may be linked out of sequence using any of the following three methods: **U
     
 5.  Press Enter or [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png)  again to close the Settings pop-up.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FGj0DeBaqy5cFOrJDEuoE%2Fimage.png?alt=media&token=435b5c75-4694-48cb-9dcb-caed09a9fe49)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FA13nJWROvUuTOtHh3ExP%2F10.12.1.webp?alt=media&token=37da5fa1-b7b9-437f-80e6-e42da39e0bb6)
 
+**Direct using the cue sheet:**
 
+1.  Tap in the Link field of the source cue in the Live Master Controller Cue Sheet
+    
+2.  The Link pop-up will appear.
+    
+3.  Type, scroll or drag to the desired destination cue.
+    
+4.  Press Enter or  <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>  again to close the Settings pop-up.
+    
+
+**To remove a Link:**
+
+1.  Select the source cue and open the Link pop-up by any of the above methods.
+    
+2.   If the proper source cue has been selected, the {Unlink} key will appear.
+    
+3.  Tap {Unlink} key to remove the Link.
+    
+
+**Alternate method:**
+
+1.   Select the source [CUE] [#] and tap {Link} on the Editor Toolbar, the Link pop-up will appear.
+    
+2.  Press [RELEASE] to remove the link.
+    
+
+>If the source cue is forgotten, check the Link # field in the Live Master Controller Cue Sheet.
 
 
 ### Loop
@@ -570,7 +597,7 @@ Cues may be linked out of sequence using any of the following three methods: **U
 
 In many consoles, the only way to create a loop is to create a link from the end of a range of cues back to the beginning. Follow time must then be assigned to all of the cues. In Vibe this is also possible but a shorter more efficient method is also provided. **LOOP** is a function similar to **LINK**. It is assigned in the Loop pop-up or via the Cue Settings pop-up.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FhUCiYqKZbhCNnUBSNsJL%2Fimage.png?alt=media&token=faa07d2f-6eb5-4915-b2bb-faa6b2f66f3f)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FtaGuw1CXdzTKI1Xp6Cg1%2F10.12.2.webp?alt=media&token=2fdf1f53-5ec0-4759-965b-b1fc8019243c)
 
 Loop Pop-up
 
@@ -595,6 +622,52 @@ Using Cue Setting Pop-Up:
 4.   Press Enter or [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png)  to complete the operation.
     
 5.   Press Enter or  [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) again to close the Settings pop-up.
+
+
+**Direct via the cue sheet:**
+
+1.  Tap in the Loop # field of the start cue in the Live Master Controller Cue Sheet - The Loop pop-up will appear.
+    
+2. Type, scroll or drag to the desired end cue.
+    
+3.  Press Enter or <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>  to complete the operation.
+    
+
+**To assign a Loop Count -** A Loop Count may be assigned using any of the above methods to open the Loop pop-up.
+
+1.  Make sure {Auto Loop} is selected.
+    
+2.  Under the {# Of Time To Loop} field, Type loop count number, or scroll the value picker to the desired loop count number.
+    
+3.  Press Enter or <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/> to complete the operation.
+    
+
+**To enable {Auto Follow} -** Auto Follow loops advance to the cue following the loop, after completion of the loop count.
+
+-   Toggle {Auto Follow} - On/Off as required.
+    
+
+**To set a Loop as Manual Loop** (Does not advance automatically)
+
+-   Toggle {Auto Loop} - Off
+    
+
+**To remove a Loop:** (Qlist must be released first)
+
+1.  Select the start cue and open the Loop pop-up by any of the above methods.
+    
+2.  If the proper start cue has been selected, the {Unloop} key will appear.
+    
+3.  Tap the {Unloop} key to remove the Link.
+    
+4. Press Enter or <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/> to complete the operation.
+    
+
+**Alternate method:** (Qlist must be released first)
+
+-   Select the start {CUE] [#] and tap {LOOP} on the Editor Toolbar - The Loop pop-up will appear.
+    
+-   Press [RELEASE] to remove the loop.
 
 
 ### Tracking Options
@@ -653,7 +726,7 @@ Using Cue Setting Pop-Up:
 8.  Store the Cue using any of the methods described under: 10.3. Storing Cues and Scenes Directly to Controllers 10.5. Storing Cues to the Master Controller 10.6. Storing Qlist Cues to any Controller
     
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FkpygyXSL31pB9jFIEWT4%2Fimage.png?alt=media&token=e4464923-9510-46ad-a373-3c69b60805c7)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FlojufTuTTjw9B7l7Azyr%2F10.13.1.webp?alt=media&token=2c7da65d-d63f-48d2-a203-e57b7e19649c)
 
 <p align=center>Parameter Time pop-up </p>
 
@@ -676,13 +749,15 @@ Using Cue Setting Pop-Up:
 • Fixtures may be selected and detected freely in the pop-up. 
 • Toggling the parameter header will select reselect all fixtures.
     
-5.   Set the parameter time for the selected fixtures directly using the keypad, or by using the virtual or physical time wheels.
+4.   Set the parameter time for the selected fixtures directly using the keypad, or by using the virtual or physical time wheels.
     
-6.   Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png)  to close the pop-up.
+5.   Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png)  to close the pop-up.
     
-7.  Selected fixtures will now show a clock icon in the Live Display.
+6.  Selected fixtures will now show a clock icon in the Live Display.
     
-8. Press [UPDATE]. See Also: 10.9. Modifying Cues and Scenes
+7. Press [UPDATE]. 
+
+See Also: 10.9. Modifying Cues and Scenes
     
 
 **Method 2:**
@@ -698,9 +773,26 @@ Using Cue Setting Pop-Up:
 ◾ Fixtures may be selected and detected freely in the pop-up. 
 ◾ Toggling the parameter header will select reselect all fixtures.
     
-8.  Set the parameter time for the selected fixtures directly using the keypad, or by using the virtual or physical time wheels.
+5.  Set the parameter time for the selected fixtures directly using the keypad, or by using the virtual or physical time wheels.
     
-9.  Press the [UPDATE] again to complete the modification. The Update light will stop flashing.
+6.  Press the [UPDATE] again to complete the modification. The Update light will stop flashing.
+
+**Remove a parameter time:**
+
+1.  Press [CUE] [#] [EDIT] - Update will flash red and the cue will be placed in the Editor.
+    
+2.   Select the fixtures to release time from - Specific parameters may be selected before pressing [TIME].
+    
+3.  Press [TIME] - The Time pop-up opens.
+    
+4.  If they were not already selected, toggle on/of the parameters that require Parameter Time to be released. 
+◾ Parameter view may be filtered by banks. 
+◾ Fixtures may be selected and detected freely in the pop-up. 
+◾ Toggling the parameter header will select reselect fixtures.
+    
+5.  Press either the {Release} key over the Time-In wheel or the {Release} over the Delay-In wheel.
+    
+6.  Press the [UPDATE] again to complete the modification. The Update light will stop flashing and the  parameters will be released back to cue time.
 
 
 ### Fanning Parameter Time
@@ -719,19 +811,19 @@ Using Cue Setting Pop-Up:
 ◾ Fixtures may be selected and detected freely in the pop-up. 
 ◾ Toggling the parameter header will select reselect all fixtures.
     
-5.  Tap the Time-In or Delay-In virtual wheel.
+4.  Tap the Time-In or Delay-In virtual wheel.
     
-6.  Tap {Fan}.
+5.  Tap {Fan}.
     
-7.  Toggle the desired fan direction key.
+6.  Toggle the desired fan direction key.
     
-8.  Rotate the appropriate virtual wheel to fan the In-Time or Delay-Time.
+7.  Rotate the appropriate virtual wheel to fan the In-Time or Delay-Time.
     
-9.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Parameter Time pop-up.
+8.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Parameter Time pop-up.
     
-10.   Press [UPDATE] - Check that the correct cue is selected.
+9.   Press [UPDATE] - Check that the correct cue is selected.
     
-11.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Update pop-up.
+10.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Update pop-up.
     
 
 >The above sequence will also work with [CUE] [#] [EDIT] but step 10 is redundant.
@@ -747,15 +839,21 @@ Using Cue Setting Pop-Up:
 ◾ Fixtures may be selected and detected freely in the pop-up. 
 ◾ Toggling the parameter header will select reselect all fixtures.
     
-5.  Tap the Time-In or Delay-In virtual wheel.
+4.  Tap the Time-In or Delay-In virtual wheel.
     
-6.  Type a time or delay range. E.g. to evenly fan delay-in time for tilt in a selection of 8 fixtures, Tap {Delay-In} wheel and then 0 → 8 seconds on the keypad.
+5.  Type a time or delay range. E.g. to evenly fan delay-in time for tilt in a selection of 8 fixtures, Tap {Delay-In} wheel and then 0 → 8 seconds on the keypad.
     
-7.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Parameter Time pop-up.
+6.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Parameter Time pop-up.
     
-8.  Press [UPDATE] - Check that the correct cue is selected.
+7.  Press [UPDATE] - Check that the correct cue is selected.
     
-9.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Update pop-up.
+8.  Press [Enter] or tap [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to close the Update pop-up.
+
+>The above sequence will also work with [CUE] [#] [EDIT] but step 8 is redundant.
+
+
+**Remove a fanned parameter time: 
+See:** 10.13.2. Adding or Modifying Parameter Time after Cue Creation.
 
 
 ## Group Submasters
@@ -782,11 +880,22 @@ Any Scene can be easily converted into a Group **Submaster** (Known in some cons
 
 2. The **Slider Definitions** pop-up will appear with the {**Controller Definitions**} tab selected.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FfbKJ9gBvW8eb1sYaYLdd%2Fimage.png?alt=media&token=32bf010a-7943-437d-854e-9095e465662e)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FlnX1ifXt2bPr2nggFlTN%2F10.14.1.webp?alt=media&token=5d515767-5197-43fd-ac8c-962105a4263a)
 
 ​
 
 3. Tap the middle {Button label}. By default, it should say {Intensity Master}. The Choose Control drop-down menu will appear.
+
+4. Select the {Submaster} option with the Crown in front of it.
+
+5. The middle button mimic should now say {Submaster}.
+
+6. Close the pop-up by pressing [Enter] or tap <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>.  
+All fixtures in the Scene will now act as Group Submasters. Scene fixture values will be ignored.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FOuyVOQxYJMWbKHgwvB0k%2F10.14.1.2.webp?alt=media&token=30ab6c49-3e31-4c10-a2f8-72c1ed587c59)
+
+
 
 
 ### Assign a Group Submater directly to a Slider Controller
