--- a/11-Filters.Rmd
+++ b/11-Filters.Rmd
@@ -16,7 +16,7 @@
 
 On the Fly Filters are used to filter editor parameters when storing cues and scenes.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FEJeoiQHqDfPKSoWt06GU%2Fimage.png?alt=media&token=b7b254c0-745e-4212-a586-cd78243d90c7)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F70gd5CGwrkMzk5SvYiQb%2F11.1.webp?alt=media&token=b2a747bc-afe3-4f38-898e-ea8f50b43fe8)
 
 >Green [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FIxghZd4JbdvIjnwXHGHZ%2Fimage.png?alt=media&token=af78182b-83d8-482b-8ac1-e8edc39f7909" width="30"/>](image.png) indicates parameters that will be included in the cue or scene.
 
@@ -56,11 +56,30 @@ Filters may be created "blind" without a fixture and parameter selection. They m
 6.  Press the {Apply} softkey to apply the filter and stay in the pop-up or press [ENTER] or [<img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>](image.png) to apply the filter and close the pop-up.
 
 
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FxJGgGofSNiTwdWFtRk9V%2Fimage.png?alt=media&token=a0874eb0-9da7-44de-bd08-2cf099a2ea51)
+
+Create "Exclude" Filter - Only the parameters in the Available Parameters box will be used - The result is similar to On The Fly Filters.
+
+1.  Press [VIBE] + [FILTERS] to open the Blind Filters pop-up.
+    
+2.  Make sure the General Tab in the lower left corner of the pop-up is selected.
+    
+3.  Press {New} - A new filter will be created with the name {1.Filter 1}.
+    
+4.  Accept the name or type a new name in the white data entry box at the bottom of the Filter's column.
+    
+5.  Tap all of the parameters except the ones you want to be excluded from recording to move them to the Filtered Parameters box - This is the inverse of "Include Filters".
+    
+6.  Press the {Apply} softkey to apply the filter and stay in the pop-up or press [ENTER] or <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/> to apply the filter and close the pop-up.
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F5yCJCJMYORB9XLWXzCvn%2Fimage.png?alt=media&token=b9b9696b-e3ec-4df3-87c1-0203e434d459)
+
+
+
 ## Library Defaults Tab
 
 When storing Bank Libraries, filters are used to exclude parameters from unrelated banks. The Library filter defaults are set under the **Filters** pop-up, **Library Defaults** tab.
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FOB6P9V1UrBS3B3nL3xCS%2Fimage.png?alt=media&token=bacc7a0a-0941-455a-af5b-d87706a8c88d)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FBUtHaWfD8AdZQM7fSUka%2F11.3.webp?alt=media&token=d11601fe-f97b-4d40-b65e-a45255e4f001)
 
 **Change Library Filter Defaults:**
 
