--- a/12-Libraries.Rmd
+++ b/12-Libraries.Rmd
@@ -28,6 +28,7 @@
 ◾ Filters – Pool of user defined flters 
 ◾ Macro
 
+>Scenes are like Submasters or Group Masters on other consoles. They may be set as additive or subtractive.
 
 
 ## Store and Modify Bank Libraries
@@ -37,7 +38,6 @@
 
 >Compulite Libraries are similar to Presets or Palettes on other consoles.
 
-**​**
 
 **Automatic Parameter Grouping:**
 
@@ -59,6 +59,103 @@
 5.  **Device** and Parameter – Values will be applied to fixtures of the same device type and the same parameter type.
     
 6.   **Device and pattern** – Values will be applied to fixtures of the same device type and keep the pattern of values. Library Bank SKs have default filters and behaviours based on the way they are commonly used.
+
+
+
+
+**Store a Library using keypad syntax:**
+1.  Press [Fixture] [#] [+ à -] - Select parameter {Bank } on Smart Screen.
+    
+2.  Use Smart Screen pickers, and/or adjust parameter wheels, or type value to set values.
+    
+3.  Press [LIBRARY] - Library {Store Options} pop-up will open at the bottom of the Smart Screen and {Banks} will appear on the Editor Toolbar.
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FVCqjLaER2OAgqUxrCI4t%2Fimage.png?alt=media&token=e6e20dba-cd8a-41bd-9f43-6d8851f60b8e)
+
+4. Tap a parameter {Bank} key on the Editor Toolbar.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FkhULoWzjDhUgDQ6bl9Oa%2Fimage.png?alt=media&token=d99a3186-7685-4a5d-ad56-6893dfc3953b)
+
+5. Enter the destination library number via the keypad.
+
+6. Make {Library Store Options} changes as required.
+
+7. Press [STORE] to complete the sequence.
+
+**A shortcut for Bank selection is to specify a number directly after pressing [LIBRARY] key:** 1 = Intensity bank 2 = Position bank 3 = Color bank 4 = Beam bank 5 = Image 6 = Shape 7 = Custom 8 = Effect
+
+After typing the first number, the bank name will appear on the command line. The next number typed will be the library number.
+
+**Modify a Library using [UPDATE]:**
+
+1.  Make a change to parameter value outputting to the stage from a library referenced in an active cue or scene.
+    
+2.  Press the [UPDATE] - The Update pop-up will open. Two columns will appear. The left column shows **Cues** available for updating and the right column shows Libraries available for updating. The source library or **libraries** should be selected.
+    
+3.  Selected libraries may be freely deselected in the Update pop-up. If all Libraries are deselected, updates will become "hard" values in the source cue instead of the source libraries being updated.
+    
+4.  Press <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/>  or press [ENTER] to close the pop-up and complete the update.
+    
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FswW9jeskVr3TEdTRVbDT%2Fimage.png?alt=media&token=5fb52b3a-4a43-4e9f-80f9-eb56ad0ed9f5)
+
+**Update pop-up**
+
+**Overwrite, Update, or Release fixtures in Libraries via Softkey syntax:**
+
+1.  Make a change to parameter value outputting to the stage from a library referenced in an active cue or scene.
+    
+2.  Press [STORE] and tap source {Library SK}.
+    
+3. The {Cancel, Update, Overwrite, Release} pop-up will appear on the large screen.
+    
+4.  Tap {Overwrite} to replace all fixtures with those in the Editor, {Update} to merge the editor into the library, or {Release} to remove the selected fixtures from the Library.
+
+
+>Releasing fixtures is only valid if the library is **Fixture Specific** or **Device + Fixture** in the case where specific fixtures have modified recorded values.
+
+>Alternately the sequence [LIBRARY] {Bank} from the Editor Toolbar [#] [STORE] to an existing library will work the same as above.
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FViZ86urYtuJEwYHs9Pz9%2Fimage.png?alt=media&token=5a876ccb-256d-40c6-afc6-8a4fe1bfd425)
+**Object Exists pop-up**
+
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F715KxeIgoRObcRqRjQAh%2Fimage.png?alt=media&token=e82df1d4-a779-41ab-9e01-b7d1f99f76c0)
+**Library Settings pop-up**
+
+Library Settings may be changed at any time after they are created using the Library Settings pop-up.
+
+**There are two ways to do this:**
+
+-   Tap the Library {SK} you wish to modify and press [SETTINGS]. (This is invalid with Snaps and Macros as it will trigger them) Or
+    
+-   Press [Library] tap {Bank} on the Editor Toolbar Press [#] [SETTINGS] - The Settings pop-up will also open. ◾ If Reference is selected, modifying the library will modify the values of ALL cues that reference it. ◾ If Timing is selected, any parameter cell times in the Editor will be stored with the library.
+    
+
+**Text labels may be assigned at any time there is NOT an active selection in the Editor. Any of the following methods are valid:**
+
+-   For Library Softkeys, Tap a Library {SK} - Start typing on the pull-out keyboard. The Text Entry pop-up will appear.
+    
+-   Tap a Library {SK} press [TEXT] - The Text Entry pop-up will appear.
+    
+-   Press [TEXT] tap a Library {SK} - The Text Entry pop-up will appear.
+    
+-   Press [Library] tap {Bank} on the Editor Toolbar Press [#] [TEXT] - The Library Text pop-up will open.
+    
+-   Directly after storing a Library, press [TEXT] - Library text pop-up will open.
+    
+
+**Delete a library:**
+
+-   Method 1: Tap the Libraries' {SK} then press [DELETE]
+    
+-   Method 2: Keypad sequence for Bank Libraries: [LIBRARY] tap {Bank} on the Editor Toolbar [#] [DELETE]
+    
+-   Method 3: Keypad sequence for deleting Object Libraries: [Object] [#] [DELETE]
+    
+
+>For most Delete functions, pressing [DELETE] [DELETE] will do the same as pressing [ENTER] or <img src="https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2F6EE8U1Wvt91iKCQ8V0Na%2Fimage.png?alt=media&token=896910e2-8a35-4b58-b0fe-3602ba6f5411.png" width="30"/> to complete the operation.
+
 
 ## Object Libraries
 
